Tests and models infrastructure changes for #2264
- Allows to read models and tests from within jar packaged plugin at
last ! (no more "Eclipse-BundleShape: dir" in manifest)
- Annotation processor now generates tests (@test annotation) that are
looked up at both runtime (in plugin>gaml>tests) and build (thanks to
maven copy resources: in plugin>tests)
- Headless now uses OSGI bundles to retrieve models and tests rather
than the good old "File" framework

Signed-off-by: AlexisDrogoul <alexis.drogoul@gmail.com>